[gd_scene load_steps=3 format=3 uid="uid://be0i26c7y26id"]

[ext_resource type="Theme" uid="uid://bheuenbl3wl31" path="res://assets/theme/main_theme.tres" id="1_l0vu2"]
[ext_resource type="Script" path="res://src/user_interface/user_interface_controller.gd" id="2_anua5"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l0vu2")
script = ExtResource("2_anua5")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -211.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.729412, 0.509804, 0.137255, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -184.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.631373, 0.439216, 0.109804, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="BlocsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 85.0
offset_top = 30.0
offset_right = 215.0
offset_bottom = 63.0
text = "%s Bloc"

[node name="BeesLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 85.0
offset_top = 76.0
offset_right = 213.0
offset_bottom = 109.0
text = "%s Bee"

[node name="ResourceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.113
anchor_right = 0.109
anchor_bottom = 0.113
offset_left = -40.568
offset_top = 489.776
offset_right = 87.432
offset_bottom = 522.776
text = "%s"

[node name="SpiderTimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 30.0
offset_right = 64.0
offset_bottom = 63.0
grow_horizontal = 2
text = "%s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 535.0
offset_right = 64.0
offset_bottom = 568.0
grow_horizontal = 2
text = "%s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpiderTimerProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.5
offset_top = 60.0
offset_right = 121.5
offset_bottom = 80.0
grow_horizontal = 2
max_value = 300.0
step = 0.1
show_percentage = false

[node name="UnioProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.5
offset_top = 569.0
offset_right = 121.5
offset_bottom = 589.0
grow_horizontal = 2
show_percentage = false

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -194.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BeeLifeLabel1" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "%s"
vertical_alignment = 1

[node name="BeeLifeLabel2" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "%s"
vertical_alignment = 1

[node name="ShowBeeActionsMenu" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "rainbow"

[node name="ActionsSelectionButton" type="OptionButton" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="ScrollContainer/VBoxContainer/ShowBeeActionsMenu" to="." method="_on_show_bee_actions_menu_pressed" binds= ["rainbow"]]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/ActionsSelectionButton" to="." method="_on_actions_selection_button_item_selected"]
